# Apology-as-a-Service

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: server.py
