[project]
name = "apology-as-a-service"
version = "0.1.0"
description = "An MCP server that provides apologies as a service for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
